PROJECT(kdl)
cmake_minimum_required(VERSION 2.6)

SET (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/.orogen/config")

list(APPEND TOOLKIT_ADDITIONAL_SOURCES ${CMAKE_SOURCE_DIR}/KDL/wrappers/KDLTypes.cpp)
#list(APPEND TOOLKIT_ADDITIONAL_LIBRARIES ${BASELIB_LIBRARIES} ${SISL_LIBRARIES})

INCLUDE(kdlBase)

# FIND_PACKAGE(KDL)
# FIND_PACKAGE(OCL)


